exports[`Voting layout renders according to window size Renders as expected for a desktop size window of 1024 1`] = `
<div
  className="container-fluid"
  style={
    Object {
      "marginTop": "1rem",
      "padding": "0px 2px",
    }
  }>
  <div
    className="row">
    <div
      className="col-md-6">
      <div
        className="row">
        <div
          className="col-md-12">
          <div
            style={
              Object {
                "marginBottom": "1rem",
              }
            }>
            <div
              className="voteChoice" />
          </div>
        </div>
      </div>
      <div
        className="row">
        <div
          className="col-md-12">
          <div
            className="voteFormContainer" />
        </div>
      </div>
    </div>
    <div
      className="col-md-6">
      <div
        className="row">
        <div
          className="col-md-12">
          <div
            style={
              Object {
                "marginBottom": "1rem",
              }
            }>
            <div
              className="workshopSchedule" />
          </div>
        </div>
      </div>
      <div
        className="row">
        <div
          className="col-md-12">
          <div
            className="connectionStatus" />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Voting layout renders according to window size Renders as expected for a mobile size window of 760 1`] = `
<div
  className="container-fluid"
  style={
    Object {
      "padding": "0px 2px",
    }
  }>
  <div
    className="row">
    <div
      className="col-xs-12">
      <div
        style={
          Object {
            "marginBottom": "1rem",
          }
        }>
        <div
          className="workshopSchedule" />
      </div>
    </div>
    <div
      className="col-xs-12">
      <div
        style={
          Object {
            "marginBottom": "1rem",
          }
        }>
        <div
          className="voteChoice" />
      </div>
    </div>
    <div
      className="col-xs-12">
      <div
        style={
          Object {
            "marginBottom": "1rem",
          }
        }>
        <div
          className="voteFormContainer" />
      </div>
    </div>
    <div
      className="col-xs-12">
      <div
        className="connectionStatus" />
    </div>
  </div>
</div>
`;
